--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -2,6 +2,8 @@
   position: relative;
   left: 0;
   text-align: left;
+  max-height: 100vh;
+  overflow-y: hidden;
 }
 
 .title {
